--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   	<a class="navbar-brand" href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=47695"><img class="zoom" src="img/logo/zilina.png"></a>
   	<a class="navbar-brand" href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=9698"><img class="zoom" src="img/logo/praha.png"></a>
     <a class="navbar-brand" href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=35553"><img class="zoom" src="img/logo/lvi.png"></a>
+    <a class="navbar-brand" href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=35553"><img class="zoom" src="img/logo/znojmo.png"></a>
   </div>
 </nav>
 
@@ -70,7 +71,7 @@
      
       <img class="mobile-hide logo mobile-responsive-img" src="img/league_logo.png" height="450">
 
-     	    <p class="news">Tak do 3.sezóny sme spravili viac zmien. Niektoré mužstvá sa nenahlásili a tak sa ich vedenie ligy rozhodlo vynechať. Namiesto toho liga prijala pár zmien. Získala účastníkov z Českej republiky (Sparta Praha a Mostečtí lvi) a premenovala sa na <b>International Hockey league</b> a prichádza s <b>novým logom</b>. Vedenie ligy sa taktiež nebráni v budúcnosti prijať aj iné európske kluby z iných krajín. </p>
+     	    <p class="news">Tak do 3.sezóny sme spravili viac zmien. Niektoré mužstvá sa nenahlásili a tak sa ich vedenie ligy rozhodlo vynechať. Namiesto toho liga prijala pár zmien. Získala účastníkov z Českej republiky (Sparta Praha, Mostečtí lvi a Orli Znojmo) a premenovala sa na <b>International Hockey league</b> a prichádza s <b>novým logom</b>. Vedenie ligy sa taktiež nebráni v budúcnosti prijať aj iné európske kluby z iných krajín. </p>
 
 </div>
 
