--- a/schedule.html
+++ b/schedule.html
@@ -21,6 +21,7 @@
   	<a class="navbar-brand" href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=47695"><img class="zoom" src="img/logo/zilina.png"></a>
   	<a class="navbar-brand" href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=9698"><img class="zoom" src="img/logo/praha.png"></a>
     <a class="navbar-brand" href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=35553"><img class="zoom" src="img/logo/lvi.png"></a>
+    <a class="navbar-brand" href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=35553"><img class="zoom" src="img/logo/znojmo.png"></a>
   </div>
 </nav>
 
@@ -97,6 +98,11 @@
           <td></td>
           <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=58877" style="color: black;">Nitra</a></td>
         </tr>
+        <tr>
+          <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=7347" style="color: black;">Poprad</a></td>
+          <td></td>
+          <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=32209" style="color: black;">Orli Znojmo</a></td>
+        </tr>
       </tbody>
     </table>
 
@@ -132,6 +138,11 @@
           <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=58552" style="color: black;">Detva</a></td>
           <td></td>
           <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=7347" style="color: black;">Poprad</a></td>
+        </tr>
+        <tr>
+          <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=32209" style="color: black;">Orli Znojmo</a></td>
+          <td></td>
+          <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=58877" style="color: black;">Nitra</a></td>
         </tr>
       </tbody>
     </table>
@@ -169,6 +180,11 @@
           <td></td>
           <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=37887" style="color: black;">Slovan Bratislava</a></td>
         </tr>
+        <tr>
+          <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=58552" style="color: black;">Detva</a></td>
+          <td></td>
+          <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=32209" style="color: black;">Orli Znojmo</a></td>
+        </tr>
       </tbody>
     </table>
 
@@ -205,6 +221,11 @@
           <td></td>
           <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=9011" style="color: black;">Košice</a></td>
         </tr>
+        <tr>
+          <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=32209" style="color: black;">Orli Znojmo</a></td>
+          <td></td>
+          <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=37887" style="color: black;">Slovan Bratislava</a></td>
+        </tr>
       </tbody>
     </table>
 
@@ -240,6 +261,11 @@
           <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=37887" style="color: black;">Slovan Bratislava</a></td>
           <td></td>
           <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=47695" style="color: black;">Žilina</a></td>
+        </tr>
+        <tr>
+          <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=32209" style="color: black;">Orli Znojmo</a></td>
+          <td></td>
+          <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=9011" style="color: black;">Košice</a></td>
         </tr>
       </tbody>
     </table>
@@ -279,6 +305,11 @@
           <td></td>
           <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=9698" style="color: black;">Sparta Praha</a></td>
         </tr>
+        <tr>
+          <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=47695" style="color: black;">Žilina</a></td>
+          <td></td>
+          <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=32209" style="color: black;">Orli Znojmo</a></td>
+        </tr>
       </tbody>
     </table>
 
@@ -314,6 +345,11 @@
           <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=47695" style="color: black;">Žilina</a></td>
           <td></td>
           <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2991" style="color: black;">Skalica</a></td>
+        </tr>
+        <tr>
+          <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=9698" style="color: black;">Sparta Praha</a></td>
+          <td></td>
+          <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=32209" style="color: black;">Orli Znojmo</a></td>
         </tr>
       </tbody>
     </table>
@@ -352,6 +388,11 @@
           <td></td>
           <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=28026" style="color: black;">Banská Bystrica</a></td>
         </tr>
+        <tr>
+          <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2991" style="color: black;">Skalica</a></td>
+          <td></td>
+          <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=32209" style="color: black;">Orli Znojmo</a></td>
+        </tr>
       </tbody>
     </table>
 
@@ -388,6 +429,11 @@
           <td></td>
           <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=35553" style="color: black;">Mostečtí lvi</a></td>
         </tr>
+        <tr>
+          <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=28026" style="color: black;">Banská Bystrica</a></td>
+          <td></td>
+          <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=32209" style="color: black;">Orli Znojmo</a></td>
+        </tr>
       </tbody>
     </table>
 
@@ -422,6 +468,11 @@
           <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=28026" style="color: black;">Banská Bystrica</a></td>
           <td></td>
           <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=23979" style="color: black;">Liptovský Mikuláš</a></td>
+        </tr>
+        <tr>
+          <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=32209" style="color: black;">Orli Znojmo</a></td>
+          <td></td>
+          <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=35553" style="color: black;">Mostečtí lvi</a></td>
         </tr>
       </tbody>
     </table>
@@ -458,6 +509,11 @@
           <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=35553" style="color: black;">Mostečtí lvi</a></td>
           <td></td>
           <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=7347" style="color: black;">Poprad</a></td>
+        </tr>
+        <tr>
+          <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=32209" style="color: black;">Orli Znojmo</a></td>
+          <td></td>
+          <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=23979" style="color: black;">Liptovský Mikuláš</a></td>
         </tr>
       </tbody>
     </table>
