--- a/playoff.html
+++ b/playoff.html
@@ -146,11 +146,11 @@
             <div class="round-details">Finále <br/><span class="date">7.10 | 9.10 | 10.10</span></div> <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN -->     
             <ul class ="matchup championship">
                 <li class="team team-top" align="left" style="background-color: #00aeef;"><img src="img/logo/nitra.png" height="18"> <b style="color: white">Nitra</b>
-                    <span class="score"></span>
+                    <span class="score">2</span>
                 </li>
                 <li class="team team-bottom" align="left" style="background-color:#00985B;"><img src="img/logo/skalica.png" height="18"> <b style="color: white">Skalica</b>
                     <span class="stav-serie" style="padding-left: 70px;"></span>
-                    <span class="score"></span></li>
+                    <span class="score">1</span></li>
             </ul>
         </div>
 </div>
