--- a/index.html
+++ b/index.html
@@ -64,14 +64,46 @@
 </nav>
 
 
+<div class="article-foto-nitra-majster" style="display: inline-flex;">
+     <div class="nitra-majster mobile-responsive-img"></div>
 
+    <div style="display: inline-block;">      
+        <h3>NITRA - MAJSTER 🏆</h3>
 
+          <p class="news">Po náročnom play-off sa Nitra dokázala predrať až do finále, kde si zmerala sily so Skalicou, ktorá si taktiež prešla tažkou cestou a príjemne nás prekvapila. Po napínavej sérií sa Nitre v poslednom rozhodujúcom zápase podarilo Skalicu nekompromisne zdolať 6:0 na domácom ľade a tak sa stáva majstrom sezóny! Je to ich prvá účasť v turnaji a mužstvo sa ukázalo hneď v tom najlepšom svetle. Nitra je tak správne nabudená do ďalšej sezóny a je pripravená sa pobiť o ďalší titul.</p>
+
+          <table class="skalica-nitra-seria">
+            <thead>
+              <th>Nitra</th>
+              <th>2:1</th>
+              <th>Skalica</th>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Nitra</td>
+                <td>0:2</td>
+                <td>Skalica</td>
+              </tr>
+              <tr>
+                <td>Nitra</td>
+                <td>7:4</td>
+                <td>Skalica</td>
+              </tr>
+              <tr>
+                <td>Nitra</td>
+                <td>6:0</td>
+                <td>Skalica</td>
+              </tr>
+            </tbody>
+          </table>
+      </div>      
+</div>
 
 <div class="article1">
      
       <img class="mobile-hide logo mobile-responsive-img" src="img/league_logo.png" height="450">
 
-     	    <p class="news">Tak do 3.sezóny sme spravili viac zmien. Niektoré mužstvá sa nenahlásili a tak sa ich vedenie ligy rozhodlo vynechať. Namiesto toho liga prijala pár zmien. Získala účastníkov z Českej republiky (Sparta Praha, Mostečtí lvi a Orli Znojmo) a premenovala sa na <b>International Hockey league</b> a prichádza s <b>novým logom</b>. Vedenie ligy sa taktiež nebráni v budúcnosti prijať aj iné európske kluby z iných krajín. </p>
+     	    <p>Tak do 3.sezóny sme spravili viac zmien. Niektoré mužstvá sa nenahlásili a tak sa ich vedenie ligy rozhodlo vynechať. Namiesto toho liga prijala pár zmien. Získala účastníkov z Českej republiky (Sparta Praha, Mostečtí lvi a Orli Znojmo) a premenovala sa na <b>International Hockey league</b> a prichádza s <b>novým logom</b>. Vedenie ligy sa taktiež nebráni v budúcnosti prijať aj iné európske kluby z iných krajín. </p>
 
 </div>
 
