--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div style="display: inline-block;">      
         <h3>NITRA - MAJSTER 🏆</h3>
 
-          <p class="news">Po náročnom play-off sa Nitra dokázala predrať až do finále, kde si zmerala sily so Skalicou, ktorá si taktiež prešla tažkou cestou a príjemne nás prekvapila. Po napínavej sérií sa Nitre v poslednom rozhodujúcom zápase podarilo Skalicu nekompromisne zdolať 6:0 na domácom ľade a tak sa stáva majstrom sezóny! Je to ich prvá účasť v turnaji a mužstvo sa ukázalo hneď v tom najlepšom svetle. Nitra je tak správne nabudená do ďalšej sezóny a je pripravená sa pobiť o ďalší titul.</p>
+          <p class="news">Po náročnom play-off sa Nitra dokázala predrať až do finále, kde si zmerala sily so Skalicou, ktorá si taktiež prešla tažkou cestou a príjemne nás prekvapila. Po napínavej sérií sa Nitre v poslednom rozhodujúcom zápase podarilo Skalicu nekompromisne zdolať 6:0 na domácom ľade a tak sa stáva majstrom sezóny! Je to ich prvá účasť v turnaji a mužstvo sa ukázalo hneď v tom najlepšom svetle. Nitra je tak správne nabudená do ďalšej sezóny a je pripravená sa pobiť o ďalší titul. Tentokrát bude Nitra čeliť aj klubom z Českej republiky. O to väčšia výzva pre Nitru ale aj ostatných účastnikov ligy.</p>
 
           <table class="skalica-nitra-seria">
             <thead>
