--- a/standings.html
+++ b/standings.html
@@ -66,17 +66,17 @@
     <div class="tabulka" align="center">
 	    <table class="tabulka-poradie">
             <tr>
-                <th onclick="sortColumn('position')">Poz</th>
-                <th onclick="sortColumn('logo')"></th>
-                <th onclick="sortColumn('club')">Názov Klubu</th>
-                <th onclick="sortColumn('matches')">OZ</th>
-                <th onclick="sortColumn('win')">V</th>
-                <th onclick="sortColumn('winsPP')">VPP</th>
-                <th onclick="sortColumn('losePP')">PPP</th>
-                <th onclick="sortColumn('lose')">P</th>
-                <th onclick="sortColumn('score')">Skóre</th>
-                <th onclick="sortColumn('diffscore')">+/-</th>
-                <th onclick="sortColumn('diffscore')">Body</th>
+                <th>Poz</th>
+                <th></th>
+                <th>Názov Klubu</th>
+                <th>OZ</th>
+                <th>V</th>
+                <th>VPP</th>
+                <th>PPP</th>
+                <th>P</th>
+                <th>Skóre</th>
+                <th>+/-</th>
+                <th>Body</th>
             </tr>
           <tbody id="tableData"></tbody>
        </table>
