--- a/halloffame.html
+++ b/halloffame.html
@@ -65,33 +65,24 @@
 </nav>
 
 
-    <div class="tabulka" align="center">
-	    <table class="tabulka-poradie" id="myTable">
-            <tr>
-                <th>Poz</th>
-                <th></th>
-                <th>Názov Klubu</th>
-                <th>OZ</th>
-                <th>V</th>
-                <th>VPP</th>
-                <th>PPP</th>
-                <th>P</th>
-                <th>Skóre</th>
-                <th>+/-</th>
-                <th>Body</th>
-            </tr>
-          <tbody id="tableData"></tbody>
-       </table>
-       <br>
-    </div>
- 	<div align="center" style="width: 300px; margin: 0 auto;">
- 			<img src="img/league_logo.png" height="200">
 
- 	</div>
+
+  <!--
+  <div align="center" class="titul-majster-span">
+    <span class="titul-majster">3. sezóna 🏆</span>
+    <span class="titul-majster">2. sezóna 🏆</span>
+    <span class="titul-majster">1. sezóna 🏆</span>
+  </div>
+  -->
 
 
 
-<script type="text/javascript" src="standings.js"></script>
+
+
+
+
+
+
 
 
 <!-- JS, Popper.js, and jQuery -->
