--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 <nav class="navbar sticky-top  mobile-hide">
+
   <div style="margin: 0 auto;">
   	<a class="navbar-brand" href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=37887"><img class="zoom" src="img/logo/slovan.png"></a>
   	<a class="navbar-brand" href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=9011"><img class="zoom" src="img/logo/kosice.png"></a>
@@ -25,6 +26,7 @@
     <a class="navbar-brand" href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=35553"><img class="zoom" src="img/logo/lvi.png"></a>
     <a class="navbar-brand" href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=32209"><img class="zoom" src="img/logo/znojmo.png"></a>
   </div>
+
 </nav>
 
 
@@ -49,6 +51,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="playoff.html" style="color: white;">Play-off</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="halloffame.html" style="color: white;">Hall of Fame</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="rules.html" style="color: white;">Rules</a>
