--- a/rules.html
+++ b/rules.html
@@ -49,6 +49,9 @@
         <a class="nav-link" href="playoff.html" style="color: white;">Play-off</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="halloffame.html" style="color: white;">Hall of Fame</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="rules.html" style="color: white;">Rules</a>
       </li>
       <li class="nav-item">
